# krabi-caliper-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
docs/: user-guide.md
src/: lib.rs
src/backends/: avr.rs  cortex_m.rs  mod.rs  risc_v.rs
src/core/: benchmark.rs  counter.rs  deterministic.rs  footprint.rs  mod.rs  paired.rs  sample.rs  stack.rs  suite.rs
src/host/: campaign.rs  combined.rs  compare.rs  ct_asm.rs  ctgrind.rs  ctgrind_macros.rs  elf.rs  isa.rs  mod.rs  model.rs  panic_audit.rs  parser.rs  render.rs  stats.rs  tests.rs
src/host/backends/: command.rs  gdb_remote.rs  jtrace.rs  jtrace_gate.rs  mod.rs  simavr.rs  timestamp.rs
src/host/campaign/: config.rs  executor.rs  model.rs  tests.rs
src/host/ct_asm/: analysis.rs  driver.rs  tests.rs
src/protocol/: mod.rs  report.rs  rtt.rs  semihosting.rs  uart.rs
src/protocol/report/: encoding.rs  model.rs  tests.rs
