[package]
name = "krabi-caliper"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "Portable measurement primitives for embedded targets and host-side analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kaidokert/krabi-caliper-rs"
keywords = ["embedded", "benchmark", "no-std", "profiling"]
categories = ["embedded", "no-std", "development-tools::profiling"]

[features]
default = []
host = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1"
