[package]
name = "krabi-caliper"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "Portable measurement primitives for embedded targets and host-side analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kaidokert/krabi-caliper-rs"
keywords = ["embedded", "benchmark", "no-std", "profiling"]
categories = ["embedded", "no-std", "development-tools::profiling"]

[features]
default = []
host = ["dep:serde", "serde/std", "dep:serde_json", "dep:object", "dep:rustc-demangle", "dep:command-group", "dep:regex"]
cli = ["host", "dep:clap"]
campaign = ["host", "dep:toml", "dep:cargo_metadata"]
ctgrind = ["host", "dep:crabgrind", "dep:inventory", "dep:paste"]
paired = []
stack = []
deterministic-rng = ["dep:rand_core"]
cortex-m = ["dep:cortex-m"]
cortex-m-dwt = ["cortex-m", "dep:critical-section"]
risc-v = []
avr = []
avr-atmega2560 = ["avr", "dep:avr-device"]
rtt = ["dep:rtt-target"]
semihosting = ["dep:cortex-m-semihosting"]
uart = []

[dependencies]
avr-device = { version = "0.7", optional = true, features = ["atmega2560"] }
cortex-m = { version = "0.7", optional = true }
critical-section = { version = "1", optional = true }
crabgrind = { version = "0.3", optional = true }
inventory = { version = "0.3", optional = true }
paste = { version = "1", optional = true }
rand_core = { version = "0.10", optional = true, default-features = false }
regex = { version = "1.10", optional = true }
rtt-target = { version = "0.6", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1", optional = true }
object = { version = "0.37", optional = true, default-features = false, features = ["read_core", "elf"] }
rustc-demangle = { version = "0.1", optional = true }
command-group = { version = "5", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
toml = { version = "0.8", optional = true }
cargo_metadata = { version = "0.19", optional = true }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m-semihosting = { version = "0.5", optional = true }

[dev-dependencies]
serde_json = "1"

[[bin]]
name = "cargo-krabi-caliper"
path = "src/bin/cargo-krabi-caliper.rs"
required-features = ["cli", "campaign"]

[[bin]]
name = "krabi-caliper-simavr"
path = "src/bin/krabi-caliper-simavr.rs"
required-features = ["cli"]
